@@ -584,6 +584,54 @@ static class MultiListenerBean {
 }
 ----
 
+[[rebalance-listeners]]
+===== Rebalance Listeners
+
+`ContainerProperties` has a property `consumerRebalanceListener` which takes an implementation of the Kafka client's `consumerRebalanceListener` interface.
+If this property is not provided, the container will configure a simple logging listener that logs rebalance events under the `INFO` level.
+The framework also adds a sub-interface `ConsumerAwareRebalanceListener`:
+
+[source, java]
+----
+public interface ConsumerAwareRebalanceListener extends ConsumerRebalanceListener {
+
+    void onPartitionsRevokedBeforeCommit(Consumer<?, ?> consumer, Collection<TopicPartition> partitions);
+
+    void onPartitionsRevokedAfterCommit(Consumer<?, ?> consumer, Collection<TopicPartition> partitions);
+
+    void onPartitionsAssigned(Consumer<?, ?> consumer, Collection<TopicPartition> partitions);
+
+}
+----
+
+Notice that there are two callbacks when partitions are revoked: the first is called immediately; the second is called after any pending offsets are committed.
+This is useful if you wish to maintain offsets in some external repository; for example:
+
+[source, java]
+----
+containerProperties.setConsumerRebalanceListener(new ConsumerAwareRebalanceListener() {
+
+    @Override
+    public void onPartitionsRevokedBeforeCommit(Consumer<?, ?> consumer, Collection<TopicPartition> partitions) {
+        // acknowledge any pending Acknowledgments (if using manual acks)
+    }
+
+    @Override
+    public void onPartitionsRevokedAfterCommit(Consumer<?, ?> consumer, Collection<TopicPartition> partitions) {
+        // ...
+            store(consumer.position(partition));
+        // ...
+    }
+
+    @Override
+    public void onPartitionsAssigned(Collection<TopicPartition> partitions) {
+        // ...
+            consumer.seek(partition, offsetTracker.getOffset() + 1);
+        // ...
+    }
+});
+----
+
 [[annotation-send-to]]
 ===== Forwarding Listener Results using @SendTo
 
